[project]
name = "ml-playground"
dynamic = ["version"]
classifiers = [
    "Private :: Do Not Upload",
]
description = ""
requires-python = ">=3.9"

dependencies = [
    "torch",
    "numpy",
    # WORKAROUND: scipy.sparse 1.13.0 does not work as I expected.
    "scipy<1.13.0",
    "scikit-learn",
    "einops",
    "jupyter",
    "notebook",
    # TODO: Unpin
    "matplotlib==3.9.4",
    "pillow",
    # TODO: Unpin
    "spacy<=3.8.4",
    "pandas",
    "geopy",
    "sympy",
    # "polars",
    "polars-lts-cpu",
    "timevec",
    "pyarrow",
    "human-readable",
    "seaborn",
    "torchviz",
    "onnx",
    "graphviz",
]

[tool.setuptools.packages.find]
where = ["example/"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "syrupy",
    "poethepoet",
    "nbmake",
    "pytest-xdist",
    "pandas-stubs",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]
coverage-xml = "pytest --cov=example example --doctest-modules --cov-report=xml"

[tool.poe.tasks.test-all]
sequence = [{ ref = "test" }, { ref = "test-notebooks" }]
ignore_fail = "return_non_zero"

[tool.poe.tasks.test-notebooks]
cmd = "pytest -n auto --nbmake ${target}"
args = [
    { name = "target", default = "notebooks", multiple = true, positional = true },
]

[tool.poe.tasks.test]
cmd = "pytest ${target}"
args = [
    { name = "target", default = "example", multiple = true, positional = true },
]

[tool.poe.tasks.check]
sequence = [
    { cmd = "ruff check ${target}" },
]
args = [
    { name = "target", default = "example", multiple = true, positional = true },
]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
sequence = [{ cmd = "ruff format ${target}" }]
args = [
    { name = "target", default = "example", multiple = true, positional = true },
]
ignore_fail = "return_non_zero"

[tool.ruff]
line-length = 79
# numpy has ended support for Python 3.8 due to NEP 29. https://numpy.org/neps/nep-0029-deprecation_policy.html
target-version = "py39"
